# envargs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: build.yml
.github/workflows/: build.yml  release.yml
envargs/: __init__.py  envargs.py  errors.py
test/: envargs_test.py
