[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envarguments"
version = "1.0.1"
authors = [
  { name="Måns Thörnvik", email="thornvik.mans@gmail.com" },
]
description = "Utility to specify which environment variable shall be used as arguments for a program."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/maansthoernvik/envargs"
"Bug Tracker" = "https://github.com/maansthoernvik/envargs/issues"